--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home pages</title>
-</head>
-<body>
-    <h1>Home</h1>
-    <p>Bienvenidos al Home</p>
-</body>
-</html>
+{% extends "_base.html" %}
+{% block content %}
+    <p>Este es el home</p>
+{% endblock %}
